--- a/index.html
+++ b/index.html
@@ -18,14 +18,27 @@
     <!--inline css-->
     <h1 style="color: red;"> project one</h1>
     <h5>header5</h5>
+    <!--id selector-->
+    <p> id="paragraph one" </p>
+    <p> id="paragraph 2"</p>
+    <!--class selector-->
+    <p> class="paragraph two</p>
+    <p>anothetr paragraph colour</p>
+    <h1>first title</h1>
+    <h2>second title</h2>
+    <h3>third title</h3>
 
+    <div>
+        <p>the quick brown fox</p>
+        <h3>header inside the dive </h3>
+    </div>
       <!--list--> 
       
       <ul>
         <li>review html basics</li> 
         <li>review css basics</li>
 
-        <!--paragraph-->
+        <!-- paragraph -->
             <p>THIS IS SOME PARAGRAPH</p>
 
             <!--anchor tag-->
